# valfendi

./: CMakeLists.txt  config.h.in  main.cpp  main.h  testdata.txt  validate.cpp  validate.h
